Backups/Yourkoza/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    CHARACTER
    DECREASE
    INCREASE
    INPUT
    INTEGER
    JOIN
    LETTER
    NOT
    OR
    POWER
    REAL
    RISK
    SAVE

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     program -> expression
Rule 3     statements -> statements statement
Rule 4     statements -> statement
Rule 5     statement -> assignment
Rule 6     statement -> conditional
Rule 7     statement -> loop
Rule 8     statement -> function
Rule 9     statement -> display
Rule 10    statement -> input
Rule 11    statement -> COMMENT
Rule 12    assignment -> LET IDENTIFIER BE EQUAL TO expression
Rule 13    conditional -> IF condition THEN statements else_statements_opt
Rule 14    else_statements_opt -> ELSE statements
Rule 15    else_statements_opt -> empty
Rule 16    condition -> expression IS_LESS_THAN expression
Rule 17    condition -> expression IS_EQUAL_TO expression
Rule 18    condition -> expression IS_GREATER_THAN expression
Rule 19    condition -> expression IS_NOT_EQUAL_TO expression
Rule 20    expression -> expression PLUS term
Rule 21    expression -> expression MINUS term
Rule 22    expression -> term
Rule 23    term -> term TIMES factor
Rule 24    term -> term DIVIDE factor
Rule 25    term -> factor
Rule 26    factor -> NUMBER
Rule 27    factor -> LPAREN expression RPAREN
Rule 28    input -> LET IDENTIFIER BE EQUAL TO SHOW IDENTIFIER LPAREN STRING_LITERAL RPAREN
Rule 29    display -> SHOW expression
Rule 30    loop -> FOR IDENTIFIER IN list DO statements
Rule 31    loop -> WHILE condition DO statements
Rule 32    list -> LBRACKET expression_list RBRACKET
Rule 33    list -> empty
Rule 34    expression_list -> expression
Rule 35    expression_list -> expression_list COMMA expression
Rule 36    function -> FUNCTION IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE return_statement_opt RBRACE
Rule 37    parameters -> IDENTIFIER
Rule 38    parameters -> parameters COMMA IDENTIFIER
Rule 39    return_statement_opt -> RETURN expression
Rule 40    return_statement_opt -> empty
Rule 41    empty -> <empty>

Terminals, with rules where they appear

AND                  : 
BE                   : 12 28
CHARACTER            : 
COMMA                : 35 38
COMMENT              : 11
DECREASE             : 
DIVIDE               : 24
DO                   : 30 31
ELSE                 : 14
EQUAL                : 12 28
FOR                  : 30
FUNCTION             : 36
IDENTIFIER           : 12 28 28 30 36 37 38
IF                   : 13
IN                   : 30
INCREASE             : 
INPUT                : 
INTEGER              : 
IS_EQUAL_TO          : 17
IS_GREATER_THAN      : 18
IS_LESS_THAN         : 16
IS_NOT_EQUAL_TO      : 19
JOIN                 : 
LBRACE               : 36
LBRACKET             : 32
LET                  : 12 28
LETTER               : 
LPAREN               : 27 28 36
MINUS                : 21
NOT                  : 
NUMBER               : 26
OR                   : 
PLUS                 : 20
POWER                : 
RBRACE               : 36 36
RBRACKET             : 32
REAL                 : 
RETURN               : 39
RISK                 : 
RPAREN               : 27 28 36
SAVE                 : 
SHOW                 : 28 29
STRING_LITERAL       : 28
THEN                 : 13
TIMES                : 23
TO                   : 12 28
WHILE                : 31
error                : 

Nonterminals, with rules where they appear

assignment           : 5
condition            : 13 31
conditional          : 6
display              : 9
else_statements_opt  : 13
empty                : 15 33 40
expression           : 2 12 16 16 17 17 18 18 19 19 20 21 27 29 34 35 39
expression_list      : 32 35
factor               : 23 24 25
function             : 8
input                : 10
list                 : 30
loop                 : 7
parameters           : 36 38
program              : 0
return_statement_opt : 36
statement            : 3 4
statements           : 1 3 13 14 30 31 36
term                 : 20 21 22 23 24

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) program -> . expression
    (3) statements -> . statements statement
    (4) statements -> . statement
    (20) expression -> . expression PLUS term
    (21) expression -> . expression MINUS term
    (22) expression -> . term
    (5) statement -> . assignment
    (6) statement -> . conditional
    (7) statement -> . loop
    (8) statement -> . function
    (9) statement -> . display
    (10) statement -> . input
    (11) statement -> . COMMENT
    (23) term -> . term TIMES factor
    (24) term -> . term DIVIDE factor
    (25) term -> . factor
    (12) assignment -> . LET IDENTIFIER BE EQUAL TO expression
    (13) conditional -> . IF condition THEN statements else_statements_opt
    (30) loop -> . FOR IDENTIFIER IN list DO statements
    (31) loop -> . WHILE condition DO statements
    (36) function -> . FUNCTION IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE return_statement_opt RBRACE
    (29) display -> . SHOW expression
    (28) input -> . LET IDENTIFIER BE EQUAL TO SHOW IDENTIFIER LPAREN STRING_LITERAL RPAREN
    (26) factor -> . NUMBER
    (27) factor -> . LPAREN expression RPAREN

    COMMENT         shift and go to state 12
    LET             shift and go to state 14
    IF              shift and go to state 15
    FOR             shift and go to state 16
    WHILE           shift and go to state 17
    FUNCTION        shift and go to state 18
    SHOW            shift and go to state 20
    NUMBER          shift and go to state 21
    LPAREN          shift and go to state 19

    program                        shift and go to state 1
    statements                     shift and go to state 2
    expression                     shift and go to state 3
    statement                      shift and go to state 4
    term                           shift and go to state 5
    assignment                     shift and go to state 6
    conditional                    shift and go to state 7
    loop                           shift and go to state 8
    function                       shift and go to state 9
    display                        shift and go to state 10
    input                          shift and go to state 11
    factor                         shift and go to state 13

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (3) statements -> statements . statement
    (5) statement -> . assignment
    (6) statement -> . conditional
    (7) statement -> . loop
    (8) statement -> . function
    (9) statement -> . display
    (10) statement -> . input
    (11) statement -> . COMMENT
    (12) assignment -> . LET IDENTIFIER BE EQUAL TO expression
    (13) conditional -> . IF condition THEN statements else_statements_opt
    (30) loop -> . FOR IDENTIFIER IN list DO statements
    (31) loop -> . WHILE condition DO statements
    (36) function -> . FUNCTION IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE return_statement_opt RBRACE
    (29) display -> . SHOW expression
    (28) input -> . LET IDENTIFIER BE EQUAL TO SHOW IDENTIFIER LPAREN STRING_LITERAL RPAREN

    $end            reduce using rule 1 (program -> statements .)
    COMMENT         shift and go to state 12
    LET             shift and go to state 14
    IF              shift and go to state 15
    FOR             shift and go to state 16
    WHILE           shift and go to state 17
    FUNCTION        shift and go to state 18
    SHOW            shift and go to state 20

    statement                      shift and go to state 22
    assignment                     shift and go to state 6
    conditional                    shift and go to state 7
    loop                           shift and go to state 8
    function                       shift and go to state 9
    display                        shift and go to state 10
    input                          shift and go to state 11

state 3

    (2) program -> expression .
    (20) expression -> expression . PLUS term
    (21) expression -> expression . MINUS term

    $end            reduce using rule 2 (program -> expression .)
    PLUS            shift and go to state 23
    MINUS           shift and go to state 24


state 4

    (4) statements -> statement .

    COMMENT         reduce using rule 4 (statements -> statement .)
    LET             reduce using rule 4 (statements -> statement .)
    IF              reduce using rule 4 (statements -> statement .)
    FOR             reduce using rule 4 (statements -> statement .)
    WHILE           reduce using rule 4 (statements -> statement .)
    FUNCTION        reduce using rule 4 (statements -> statement .)
    SHOW            reduce using rule 4 (statements -> statement .)
    $end            reduce using rule 4 (statements -> statement .)
    ELSE            reduce using rule 4 (statements -> statement .)
    RBRACE          reduce using rule 4 (statements -> statement .)


state 5

    (22) expression -> term .
    (23) term -> term . TIMES factor
    (24) term -> term . DIVIDE factor

    PLUS            reduce using rule 22 (expression -> term .)
    MINUS           reduce using rule 22 (expression -> term .)
    $end            reduce using rule 22 (expression -> term .)
    IS_LESS_THAN    reduce using rule 22 (expression -> term .)
    IS_EQUAL_TO     reduce using rule 22 (expression -> term .)
    IS_GREATER_THAN reduce using rule 22 (expression -> term .)
    IS_NOT_EQUAL_TO reduce using rule 22 (expression -> term .)
    RPAREN          reduce using rule 22 (expression -> term .)
    COMMENT         reduce using rule 22 (expression -> term .)
    LET             reduce using rule 22 (expression -> term .)
    IF              reduce using rule 22 (expression -> term .)
    FOR             reduce using rule 22 (expression -> term .)
    WHILE           reduce using rule 22 (expression -> term .)
    FUNCTION        reduce using rule 22 (expression -> term .)
    SHOW            reduce using rule 22 (expression -> term .)
    ELSE            reduce using rule 22 (expression -> term .)
    RBRACE          reduce using rule 22 (expression -> term .)
    THEN            reduce using rule 22 (expression -> term .)
    DO              reduce using rule 22 (expression -> term .)
    RBRACKET        reduce using rule 22 (expression -> term .)
    COMMA           reduce using rule 22 (expression -> term .)
    TIMES           shift and go to state 25
    DIVIDE          shift and go to state 26


state 6

    (5) statement -> assignment .

    COMMENT         reduce using rule 5 (statement -> assignment .)
    LET             reduce using rule 5 (statement -> assignment .)
    IF              reduce using rule 5 (statement -> assignment .)
    FOR             reduce using rule 5 (statement -> assignment .)
    WHILE           reduce using rule 5 (statement -> assignment .)
    FUNCTION        reduce using rule 5 (statement -> assignment .)
    SHOW            reduce using rule 5 (statement -> assignment .)
    $end            reduce using rule 5 (statement -> assignment .)
    ELSE            reduce using rule 5 (statement -> assignment .)
    RBRACE          reduce using rule 5 (statement -> assignment .)


state 7

    (6) statement -> conditional .

    COMMENT         reduce using rule 6 (statement -> conditional .)
    LET             reduce using rule 6 (statement -> conditional .)
    IF              reduce using rule 6 (statement -> conditional .)
    FOR             reduce using rule 6 (statement -> conditional .)
    WHILE           reduce using rule 6 (statement -> conditional .)
    FUNCTION        reduce using rule 6 (statement -> conditional .)
    SHOW            reduce using rule 6 (statement -> conditional .)
    $end            reduce using rule 6 (statement -> conditional .)
    ELSE            reduce using rule 6 (statement -> conditional .)
    RBRACE          reduce using rule 6 (statement -> conditional .)


state 8

    (7) statement -> loop .

    COMMENT         reduce using rule 7 (statement -> loop .)
    LET             reduce using rule 7 (statement -> loop .)
    IF              reduce using rule 7 (statement -> loop .)
    FOR             reduce using rule 7 (statement -> loop .)
    WHILE           reduce using rule 7 (statement -> loop .)
    FUNCTION        reduce using rule 7 (statement -> loop .)
    SHOW            reduce using rule 7 (statement -> loop .)
    $end            reduce using rule 7 (statement -> loop .)
    ELSE            reduce using rule 7 (statement -> loop .)
    RBRACE          reduce using rule 7 (statement -> loop .)


state 9

    (8) statement -> function .

    COMMENT         reduce using rule 8 (statement -> function .)
    LET             reduce using rule 8 (statement -> function .)
    IF              reduce using rule 8 (statement -> function .)
    FOR             reduce using rule 8 (statement -> function .)
    WHILE           reduce using rule 8 (statement -> function .)
    FUNCTION        reduce using rule 8 (statement -> function .)
    SHOW            reduce using rule 8 (statement -> function .)
    $end            reduce using rule 8 (statement -> function .)
    ELSE            reduce using rule 8 (statement -> function .)
    RBRACE          reduce using rule 8 (statement -> function .)


state 10

    (9) statement -> display .

    COMMENT         reduce using rule 9 (statement -> display .)
    LET             reduce using rule 9 (statement -> display .)
    IF              reduce using rule 9 (statement -> display .)
    FOR             reduce using rule 9 (statement -> display .)
    WHILE           reduce using rule 9 (statement -> display .)
    FUNCTION        reduce using rule 9 (statement -> display .)
    SHOW            reduce using rule 9 (statement -> display .)
    $end            reduce using rule 9 (statement -> display .)
    ELSE            reduce using rule 9 (statement -> display .)
    RBRACE          reduce using rule 9 (statement -> display .)


state 11

    (10) statement -> input .

    COMMENT         reduce using rule 10 (statement -> input .)
    LET             reduce using rule 10 (statement -> input .)
    IF              reduce using rule 10 (statement -> input .)
    FOR             reduce using rule 10 (statement -> input .)
    WHILE           reduce using rule 10 (statement -> input .)
    FUNCTION        reduce using rule 10 (statement -> input .)
    SHOW            reduce using rule 10 (statement -> input .)
    $end            reduce using rule 10 (statement -> input .)
    ELSE            reduce using rule 10 (statement -> input .)
    RBRACE          reduce using rule 10 (statement -> input .)


state 12

    (11) statement -> COMMENT .

    COMMENT         reduce using rule 11 (statement -> COMMENT .)
    LET             reduce using rule 11 (statement -> COMMENT .)
    IF              reduce using rule 11 (statement -> COMMENT .)
    FOR             reduce using rule 11 (statement -> COMMENT .)
    WHILE           reduce using rule 11 (statement -> COMMENT .)
    FUNCTION        reduce using rule 11 (statement -> COMMENT .)
    SHOW            reduce using rule 11 (statement -> COMMENT .)
    $end            reduce using rule 11 (statement -> COMMENT .)
    ELSE            reduce using rule 11 (statement -> COMMENT .)
    RBRACE          reduce using rule 11 (statement -> COMMENT .)


state 13

    (25) term -> factor .

    TIMES           reduce using rule 25 (term -> factor .)
    DIVIDE          reduce using rule 25 (term -> factor .)
    PLUS            reduce using rule 25 (term -> factor .)
    MINUS           reduce using rule 25 (term -> factor .)
    $end            reduce using rule 25 (term -> factor .)
    IS_LESS_THAN    reduce using rule 25 (term -> factor .)
    IS_EQUAL_TO     reduce using rule 25 (term -> factor .)
    IS_GREATER_THAN reduce using rule 25 (term -> factor .)
    IS_NOT_EQUAL_TO reduce using rule 25 (term -> factor .)
    RPAREN          reduce using rule 25 (term -> factor .)
    COMMENT         reduce using rule 25 (term -> factor .)
    LET             reduce using rule 25 (term -> factor .)
    IF              reduce using rule 25 (term -> factor .)
    FOR             reduce using rule 25 (term -> factor .)
    WHILE           reduce using rule 25 (term -> factor .)
    FUNCTION        reduce using rule 25 (term -> factor .)
    SHOW            reduce using rule 25 (term -> factor .)
    ELSE            reduce using rule 25 (term -> factor .)
    RBRACE          reduce using rule 25 (term -> factor .)
    THEN            reduce using rule 25 (term -> factor .)
    DO              reduce using rule 25 (term -> factor .)
    RBRACKET        reduce using rule 25 (term -> factor .)
    COMMA           reduce using rule 25 (term -> factor .)


state 14

    (12) assignment -> LET . IDENTIFIER BE EQUAL TO expression
    (28) input -> LET . IDENTIFIER BE EQUAL TO SHOW IDENTIFIER LPAREN STRING_LITERAL RPAREN

    IDENTIFIER      shift and go to state 27


state 15

    (13) conditional -> IF . condition THEN statements else_statements_opt
    (16) condition -> . expression IS_LESS_THAN expression
    (17) condition -> . expression IS_EQUAL_TO expression
    (18) condition -> . expression IS_GREATER_THAN expression
    (19) condition -> . expression IS_NOT_EQUAL_TO expression
    (20) expression -> . expression PLUS term
    (21) expression -> . expression MINUS term
    (22) expression -> . term
    (23) term -> . term TIMES factor
    (24) term -> . term DIVIDE factor
    (25) term -> . factor
    (26) factor -> . NUMBER
    (27) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 21
    LPAREN          shift and go to state 19

    condition                      shift and go to state 28
    expression                     shift and go to state 29
    term                           shift and go to state 5
    factor                         shift and go to state 13

state 16

    (30) loop -> FOR . IDENTIFIER IN list DO statements

    IDENTIFIER      shift and go to state 30


state 17

    (31) loop -> WHILE . condition DO statements
    (16) condition -> . expression IS_LESS_THAN expression
    (17) condition -> . expression IS_EQUAL_TO expression
    (18) condition -> . expression IS_GREATER_THAN expression
    (19) condition -> . expression IS_NOT_EQUAL_TO expression
    (20) expression -> . expression PLUS term
    (21) expression -> . expression MINUS term
    (22) expression -> . term
    (23) term -> . term TIMES factor
    (24) term -> . term DIVIDE factor
    (25) term -> . factor
    (26) factor -> . NUMBER
    (27) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 21
    LPAREN          shift and go to state 19

    condition                      shift and go to state 31
    expression                     shift and go to state 29
    term                           shift and go to state 5
    factor                         shift and go to state 13

state 18

    (36) function -> FUNCTION . IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE return_statement_opt RBRACE

    IDENTIFIER      shift and go to state 32


state 19

    (27) factor -> LPAREN . expression RPAREN
    (20) expression -> . expression PLUS term
    (21) expression -> . expression MINUS term
    (22) expression -> . term
    (23) term -> . term TIMES factor
    (24) term -> . term DIVIDE factor
    (25) term -> . factor
    (26) factor -> . NUMBER
    (27) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 21
    LPAREN          shift and go to state 19

    expression                     shift and go to state 33
    term                           shift and go to state 5
    factor                         shift and go to state 13

state 20

    (29) display -> SHOW . expression
    (20) expression -> . expression PLUS term
    (21) expression -> . expression MINUS term
    (22) expression -> . term
    (23) term -> . term TIMES factor
    (24) term -> . term DIVIDE factor
    (25) term -> . factor
    (26) factor -> . NUMBER
    (27) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 21
    LPAREN          shift and go to state 19

    expression                     shift and go to state 34
    term                           shift and go to state 5
    factor                         shift and go to state 13

state 21

    (26) factor -> NUMBER .

    TIMES           reduce using rule 26 (factor -> NUMBER .)
    DIVIDE          reduce using rule 26 (factor -> NUMBER .)
    PLUS            reduce using rule 26 (factor -> NUMBER .)
    MINUS           reduce using rule 26 (factor -> NUMBER .)
    $end            reduce using rule 26 (factor -> NUMBER .)
    IS_LESS_THAN    reduce using rule 26 (factor -> NUMBER .)
    IS_EQUAL_TO     reduce using rule 26 (factor -> NUMBER .)
    IS_GREATER_THAN reduce using rule 26 (factor -> NUMBER .)
    IS_NOT_EQUAL_TO reduce using rule 26 (factor -> NUMBER .)
    RPAREN          reduce using rule 26 (factor -> NUMBER .)
    COMMENT         reduce using rule 26 (factor -> NUMBER .)
    LET             reduce using rule 26 (factor -> NUMBER .)
    IF              reduce using rule 26 (factor -> NUMBER .)
    FOR             reduce using rule 26 (factor -> NUMBER .)
    WHILE           reduce using rule 26 (factor -> NUMBER .)
    FUNCTION        reduce using rule 26 (factor -> NUMBER .)
    SHOW            reduce using rule 26 (factor -> NUMBER .)
    ELSE            reduce using rule 26 (factor -> NUMBER .)
    RBRACE          reduce using rule 26 (factor -> NUMBER .)
    THEN            reduce using rule 26 (factor -> NUMBER .)
    DO              reduce using rule 26 (factor -> NUMBER .)
    RBRACKET        reduce using rule 26 (factor -> NUMBER .)
    COMMA           reduce using rule 26 (factor -> NUMBER .)


state 22

    (3) statements -> statements statement .

    COMMENT         reduce using rule 3 (statements -> statements statement .)
    LET             reduce using rule 3 (statements -> statements statement .)
    IF              reduce using rule 3 (statements -> statements statement .)
    FOR             reduce using rule 3 (statements -> statements statement .)
    WHILE           reduce using rule 3 (statements -> statements statement .)
    FUNCTION        reduce using rule 3 (statements -> statements statement .)
    SHOW            reduce using rule 3 (statements -> statements statement .)
    $end            reduce using rule 3 (statements -> statements statement .)
    ELSE            reduce using rule 3 (statements -> statements statement .)
    RBRACE          reduce using rule 3 (statements -> statements statement .)


state 23

    (20) expression -> expression PLUS . term
    (23) term -> . term TIMES factor
    (24) term -> . term DIVIDE factor
    (25) term -> . factor
    (26) factor -> . NUMBER
    (27) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 21
    LPAREN          shift and go to state 19

    term                           shift and go to state 35
    factor                         shift and go to state 13

state 24

    (21) expression -> expression MINUS . term
    (23) term -> . term TIMES factor
    (24) term -> . term DIVIDE factor
    (25) term -> . factor
    (26) factor -> . NUMBER
    (27) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 21
    LPAREN          shift and go to state 19

    term                           shift and go to state 36
    factor                         shift and go to state 13

state 25

    (23) term -> term TIMES . factor
    (26) factor -> . NUMBER
    (27) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 21
    LPAREN          shift and go to state 19

    factor                         shift and go to state 37

state 26

    (24) term -> term DIVIDE . factor
    (26) factor -> . NUMBER
    (27) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 21
    LPAREN          shift and go to state 19

    factor                         shift and go to state 38

state 27

    (12) assignment -> LET IDENTIFIER . BE EQUAL TO expression
    (28) input -> LET IDENTIFIER . BE EQUAL TO SHOW IDENTIFIER LPAREN STRING_LITERAL RPAREN

    BE              shift and go to state 39


state 28

    (13) conditional -> IF condition . THEN statements else_statements_opt

    THEN            shift and go to state 40


state 29

    (16) condition -> expression . IS_LESS_THAN expression
    (17) condition -> expression . IS_EQUAL_TO expression
    (18) condition -> expression . IS_GREATER_THAN expression
    (19) condition -> expression . IS_NOT_EQUAL_TO expression
    (20) expression -> expression . PLUS term
    (21) expression -> expression . MINUS term

    IS_LESS_THAN    shift and go to state 41
    IS_EQUAL_TO     shift and go to state 42
    IS_GREATER_THAN shift and go to state 43
    IS_NOT_EQUAL_TO shift and go to state 44
    PLUS            shift and go to state 23
    MINUS           shift and go to state 24


state 30

    (30) loop -> FOR IDENTIFIER . IN list DO statements

    IN              shift and go to state 45


state 31

    (31) loop -> WHILE condition . DO statements

    DO              shift and go to state 46


state 32

    (36) function -> FUNCTION IDENTIFIER . LPAREN parameters RPAREN LBRACE statements RBRACE return_statement_opt RBRACE

    LPAREN          shift and go to state 47


state 33

    (27) factor -> LPAREN expression . RPAREN
    (20) expression -> expression . PLUS term
    (21) expression -> expression . MINUS term

    RPAREN          shift and go to state 48
    PLUS            shift and go to state 23
